# SFMLPhysics2D

./: CMakeLists.txt  README.md  build-and-run.sh
inc/: Assets.hpp  BoxCollider2D.hpp  CollisionDetector.hpp  Ground.hpp  Player.hpp  RigidBody2D.hpp
src/: Assets.cpp  BoxCollider2D.cpp  CollisionDetector.cpp  Ground.cpp  Player.cpp  RigidBody2D.cpp  main.cpp
